Bug 252273 - R: Imap do not sync anymore after modifying local subscription
Summary: R: Imap do not sync anymore after modifying local subscription
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-24 19:07 UTC by Sabine Faure
Modified: 2010-10-22 02:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-09-24 19:07:02 UTC
Version:           unspecified (using Devel) 
OS:                Linux

I know that bug #250070 is the same as this one but since the Manage local subscription has been remodeled since I reported that bug its description would not match this bug. Hence a new one:

After the user removes the subscription to some of the shared folders, the Imap
resource does not synchronize anymore.

It is now completely unresponsive both when I launch a sync from the N900 or
the Akonadi console whereas it was working fine before.

Reproducible: Always

Steps to Reproduce:
- Launch Kmail-mobile
- Launch Akonadi console on the N900 from another computer
- Click on the Imap account
- Open the 'Actions' tab
- Click on 'Account'
- Click on 'Synchronize emails in account'
- You should see the Imap account syncing correctly from Akonadi console
- Once the syncing is done click on 'Manage Local Subscriptions...'
- Uncheck one checked shared folder from the list
- Click on 'Ok'
- Relaunch a sync of the Imap account

Actual Results:  
Nothing happens. There is no synchronization of the Imap resource anymore
eventhough it is still displayed as 'Ready' in Akonadi console.

The shared folder that was unchecked is still displayed in the folder view.


Expected Results:  
The Imap account synchronization should work even when unsubscribing folder(s) from the local subscription.


That is a regression since I retested that yesterday and it worked fine then.

Work around: only an Akonadi server restart will make the Imap resource sync again.

N900, 4:4.5~20100924.1179066-1maemo1.1177763
Comment 1 Sabine Faure 2010-09-24 19:28:44 UTC
The work around only works a few times after that the Imap resource does not answer to anything anymore.

Here is the error I keep seeing in the terminal:

akonadi_imap_resource_0(12357)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
akonadi_imap_resource_0(12357) RetrieveCollectionsTask::onMailBoxesReceived: Dummy collection created:  "/shared.builds"
akonadi_imap_resource_0(12357) RetrieveCollectionsTask::onMailBoxesReceived: Received the real collection for a dummy one :  "/shared.builds"
akonadi_imap_resource_0(12357) RetrieveCollectionsTask::onMailBoxesReceived: Dummy collection created:  "/user"
akonadi_imap_resource_0(12357) RetrieveCollectionsTask::onMailBoxesReceived: Dummy collection created:  "/user/dfaure"
akonadi_imap_resource_0(12357) RetrieveCollectionsTask::onMailBoxesReceived: Dummy collection created:  "/user/dfaure/Calendar"
Error during executing query "INSERT INTO CollectionTable (remoteId, remoteRevision, name, parentId, resourceId, cachePolicyInherit) VALUES (:0, :1, :2, :3, :4, :5)" :  "constraint failed Unable to fetch row" 
Error during insertion into table "CollectionTable" "constraint failed Unable to fetch row" 
found 16 item parts to expire in collection "trash" 

N900, 4:4.5~20100924.1179066-1maemo1.1177763
Comment 2 Volker Krause 2010-10-19 11:30:22 UTC
SVN commit 1187407 by vkrause:

When syncing collection trees in resources we need to consider locally
unsubscribed folders as well, otherwise the resource (being unaware of
local subscription) might try to re-create the missing folders, which
will of course fail.

BUG: 252273


 M  +1 -0      collectionsync.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1187407
Comment 3 Sabine Faure 2010-10-22 02:02:49 UTC
It is corrected now.

After unchecking a folder from the Manage Local Subscriptions dialogue, the Imap resource now syncs fine and the unchecked folder is no longer displayed in folder view.

N900, 4:4.6~20101021.1188097-1maemo1.1187374