When syncing collection trees in resources we need to consider locally unsubscribed folders as well, otherwise the resource (being unaware of local subscription) might try to re-create the missing folders, which will of course fail.

BUG: 252273

svn path=/trunk/KDE/kdepimlibs/; revision=1187407